# Retail-Stores-Sales

./: .gitignore  README.md  eda_preprocessing.yaml  pyproject.toml
config/: eda_preprocessing.yaml  preprocessing_config.yaml
models/: scaler.pkl
notebooks/: eda.ipynb
src/: eda.py  eda_pipeline.py  preprocessing.py  utils.py
